# metal-detector-project

./: .gitignore  Cargo.toml  README.md  build.sh  flash.sh  memory.x
.cargo/: config
src/: main.rs  metal_detector.rs
